# connectfour

./: .coveragerc  .gitignore  .pylintrc  README.md  maarittelydokumentti.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
src/: ai_player.py  board.py  connect_four.py  player.py  ui.py
src/tests/: test_ai_player.py  test_board.py  test_player.py
