[tool.poetry]
name = "connectfour"
version = "0.1.0"
description = ""
authors = ["Ville Saastamoinen"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
numpy = "^1.26.3"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
coverage = "^7.4.0"
pylint = "^3.0.3"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
